# soundAnalyzer

./: .gitignore  pyproject.toml
sound_analyzer/: play_sample.py  record_sample.py  sound_analyzer.py
